--- a/readme.Rmd
+++ b/readme.Rmd
@@ -243,7 +243,7 @@ plot(t_ctrl[[1]])
 plot(pov, add = TRUE)
 ```
 
-> :question: Proč nevidíme na mapě povodí?
+:question: Proč nevidíme na mapě povodí?
 
 ###### Projekce
 
@@ -295,4 +295,4 @@ delt[, T_del := T_scen-T_ctrl]
 
 Sloupec `del` obsahuje změny ve stupních. 
 
-> :exclamation: V našem zadání bude `sim` i `ctrl` obsahovat i srážky. U srážek nebudeme uvažovat rozdíl, ale podíl.
+:exclamation: V našem zadání bude `sim` i `ctrl` obsahovat i srážky. U srážek nebudeme uvažovat rozdíl, ale podíl.
